--- a/package.json
+++ b/package.json
@@ -216,7 +216,7 @@
     "babel-polyfill": "6.23.0",
     "chalk": "1.1.3",
     "compression": "1.6.2",
-    "cross-env": "5.0.0",
+    "cross-env": "^5.0.0",
     "datatables": "1.10.13",
     "datatables.net": "1.10.15",
     "datatables.net-bs": "1.10.15",
